# puppyterm

./: .gitignore  Cargo.toml  build.rs  update_signature_public_key.txt
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: build_macos_app.sh  generate_update_signing_keys.sh  package_release.ps1  package_release.sh
src/: app.rs  domain.rs  interop.rs  lib.rs  main.rs  platform.rs  ssh.rs  storage.rs  terminal.rs  ui.rs  updater.rs
