[package]
name = "puppyterm"
version = "0.1.0"
edition = "2024"

[package.metadata.bundle]
name = "PuppyTerm"
identifier = "com.puppyterm.app"
icon = ["assets/puppyterm.png"]

[dependencies]
gpui = "0.2"
aes-gcm = "0.10.3"
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "=0.4.43", features = ["serde"] }
dirs = "6.0.0"
keyring = "3.6.3"
parking_lot = "0.12.5"
portable-pty = "0.9.0"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
vt100 = "0.16.2"

[dev-dependencies]
tempfile = "3.26.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
