[package]
name = "puppyterm"
version = "0.1.0"
edition = "2024"
default-run = "puppyterm"
build = "build.rs"

[package.metadata.bundle]
name = "PuppyTerm"
identifier = "com.puppyterm.app"
icon = ["assets/puppyterm.png"]

[dependencies]
gpui = "0.2"
aes-gcm = "0.10.3"
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "=0.4.43", features = ["serde"] }
dirs = "6.0.0"
ed25519-dalek = "2.2.0"
keyring = "3.6.3"
parking_lot = "0.12.5"
portable-pty = "0.9.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["serde", "v4"] }
vt100 = "0.16.2"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.26.0"

[build-dependencies]
embed-resource = "3.0.6"
image = { version = "0.25.9", default-features = false, features = ["ico", "png"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
